<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="email_hint">Enter your Email</string>
    <string name="password_hint">Enter your Password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="welcome_text">Welcome To The Shoe Store</string>
    <string name="welcome_details">Welcome to our simple android app for a shoe store inventory :)</string>
    <string name="instructions_text">Instructions</string>
    <string name="instruction_text">How to use the app</string>
    <string name="instructions_details">The App shows a list of shoes that you have added.\n\n
        You press the floating button in the Shoe List Screen to add a shoe.\n\n
        You have to enter the model/name of the shoe, the company that made the shoe, some details about the shoe and
        finally the size of the shoe.</string>
    <string name="instructions_button">Shoe List</string>
    <string name="add_show_hint">Add a shoe</string>
    <string name="shoe_list_scroll_hint">A scrollable list of shoes</string>
    <string name="shoe_image_hint">Shoe Image</string>
    <string name="shoe_details_hint">Enter Shoe Details</string>
    <string name="shoe_size_hint">Enter Shoe Size</string>
    <string name="choose_a_shoe_image_hint">Choose a Shoe Image</string>
    <string name="add_shoe_name_hint">Enter Shoe Model</string>
    <string name="add_shoe_company_hint">Enter Shoe Company</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="invalid_input">Please make sure all fields have valid input</string>
    <string name="logout_menu">Logout</string>
    <string name="login_background">Login background Image</string>
</resources>
