<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/choose_shoe_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/choose_a_shoe_image_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />
        <EditText
            android:id="@+id/add_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/add_shoe_name_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={viewModel.shoe.name}"
            app:layout_constraintBottom_toTopOf="@+id/add_shoe_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_shoe_image" />

        <EditText
            android:id="@+id/add_shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoe_size_hint"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_shoe_details" />

        <EditText
            android:id="@+id/add_shoe_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/shoe_details_hint"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@={viewModel.shoe.description}"
            app:layout_constraintBottom_toTopOf="@+id/add_shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_shoe_company" />

        <EditText
            android:id="@+id/add_shoe_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/add_shoe_company_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={viewModel.shoe.company}"
            app:layout_constraintBottom_toTopOf="@+id/add_shoe_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_shoe_name" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/add_button"
            android:text="@string/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cancel_button"
            android:text="@string/cancel_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/add_button"
            app:layout_constraintEnd_toStartOf="@+id/add_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>