<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="55dp">

        <TextView
            android:id="@+id/welcome_title"
            android:text="@string/welcome_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/title" />

        <TextView
            android:id="@+id/welcome_details"
            android:text="@string/welcome_details"
            app:layout_constraintEnd_toEndOf="@+id/welcome_title"
            app:layout_constraintStart_toStartOf="@+id/welcome_title"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title"
            style="@style/details" />

        <Button
            android:id="@+id/welcome_button"
            style="@style/button"
            android:text="@string/instructions_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_details"
            app:layout_constraintVertical_bias="0.19999999" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>